{
    "name": "KeyboardControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "a9d5c0b4-8a70-472a-ae47-72a84e48db6e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "fa785c55-652d-488e-8bfb-23e0a5bc2e5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "76b006d4-65cd-4578-b008-19f429a357d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MiddleButtonHold",
                    "type": "Button",
                    "id": "a2c25df2-7eb3-48f3-9dc2-5d042e2a6034",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "a5b46637-f2f2-4ac9-887a-fd8b38c98c7c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePositionDelta",
                    "type": "Value",
                    "id": "e1e0819b-222e-481c-9790-c8dad29adbe0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "537dee87-4b61-4635-8318-c0775d31f5ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af17a8fd-7b77-491c-aec0-46d5f9f2db2a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a30a0e80-2f10-47bf-8adf-68802be34a18",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80575e6a-cb8e-4161-8437-e1ebf1993716",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleButtonHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83900499-5f3f-4938-8214-9237ab4cd09d",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a247904f-e512-4490-97ae-a9cdd3142eb2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePositionDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afe57e03-f8cb-4925-a22e-6c3c7120dc46",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}